fix heading jump and pre margin

--- a/sass/elements/_article.scss
+++ b/sass/elements/_article.scss
@@ -28,7 +28,7 @@
       font-family: 'LXGW Bright', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
       &:target {
-        scroll-margin-top: 2em;
+        scroll-margin-top: 3.5rem + 0.5rem;
       }
 
       a.zola-anchor {
@@ -120,6 +120,7 @@
   pre {
     font-size: 90%;
     padding: 1em;
+    margin: 0.5em 0;
     overflow-x: auto;
     border-radius: 0.5rem;
   }
